第27次提交：实现中等难度（脑残+1）人机，实现排行榜

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:label="南瓜五子棋"
         android:supportsRtl="true"
         android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen">
-        <activity android:name=".aty.RenjiGameAty">
+        <activity android:name=".aty.RenjiGameAty" android:theme="@style/Theme.AppCompat.Light.NoActionBar" >
 
         </activity>
         <activity android:name=".aty.FindOthersAty">
@@ -27,6 +27,7 @@
         </activity>
         <activity android:name=".aty.BlueToothGameAty"></activity>
         <activity android:name=".aty.RenRenGameAty"></activity>
+        <activity android:name=".aty.RankAty"></activity>
     </application>
 
 </manifest>
